[package]
name = "sqids"
description = "Generate short unique ids from numbers."
repository = "https://github.com/sqids/sqids-rust"
documentation = "https://docs.rs/sqids"
homepage = "https://sqids.org/rust"
version = "0.4.0"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["ids", "encode", "short", "sqids", "hashids"]

[dependencies]
derive_builder = "0.12.0"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
