[package]
name = "sqids"
description = "Generate short unique ids from numbers."
repository = "https://github.com/sqids/sqids-rust"
documentation = "https://docs.rs/sqids"
homepage = "https://sqids.org/rust"
version = "0.4.2"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["ids", "encode", "short", "sqids", "hashids"]

[dependencies]
derive_builder = "0.20.0"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
